# tardis

./: .buildinfo  .coveragerc  .dccache  .mailmap  .zenodo.json  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  GOVERNANCE.md  PyodideServiceWorker.js  README.rst  README_TEMPLATE.rst  ZENODO.html  asv.conf.json  conda-lock.yml  credits.html  debug.ipynb  faq.html  genindex.html  how_to_guides.html  index.html  installation.html  multiindex_isotope_decay_data.html  news.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  quickstart.ipynb  roadmap.html  search.html  searchindex.js  setup.cfg  sponsors.html  tag_commits.txt  tardis_dash_runner.py  (+5 more)
.azure-pipelines/: compare-refdata.yml
.ci-helpers/: download_reference_data.sh  update_credits.py
.doctrees/: credits.doctree
_modules/: abc.html  index.html
_sources/: ZENODO.rst.txt  how_to_guides.rst.txt  tutorials.rst.txt
_static/: documentation_options.js
api/: modules.html  tardis.analysis.html  tardis.base.html  tardis.constants.html  tardis.energy_input.GXPacket.html  tardis.energy_input.energy_source.html  tardis.energy_input.gamma_packet_loop.html  tardis.energy_input.gamma_ray_channel.html  tardis.energy_input.gamma_ray_estimators.html  tardis.energy_input.gamma_ray_grid.html  tardis.energy_input.gamma_ray_interactions.html  tardis.energy_input.gamma_ray_packet_source.html  tardis.energy_input.gamma_ray_transport.html  tardis.energy_input.html  tardis.energy_input.main_gamma_ray_loop.html  tardis.energy_input.nuclear_energy_source.html  tardis.energy_input.samplers.html  tardis.energy_input.util.html  tardis.grid.base.html  tardis.grid.html  tardis.gui.datahandler.html  tardis.gui.html  tardis.gui.interface.html  tardis.gui.widgets.html  tardis.html  tardis.io.atom_data.atom_web_download.html  tardis.io.atom_data.base.html  tardis.io.atom_data.collision_data.html  (+210 more)
(+3758 files in other folders)
